<resources>
    <string name="app_name">NoteVia</string>

    <string name="dialog_delete_confirm_btn">Delete</string>
    <string name="dialog_dismiss_btn">Cancel</string>
    <string name="dialog_reminder_confirm_btn">Save</string>
    <string name="dialog_time_picker_confirm_btn">OK</string>
    <string name="my_notes">My Notes</string>
    <string name="notes">Notes</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_question">Are you sure you want to delete this note? (This action can not be undone)</string>
    <string name="select_avatar_img">Select Avatar Image</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_font">Choose font</string>

    <string name="search_note">Search note</string>
...
