...
                    .fillMaxWidth()
                    .padding(bottom = 24.dp, top = 16.dp),
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.End
            ) {
                FloatingActionButton(
                    modifier = Modifier.testTag("fab-add-note"),
                    onClick = onFabClick,
                    containerColor = Primary,
                    contentColor = White,
                    shape = CircleShape
                ) {
                    Icon(fabIcon, contentDescription = "Add")
...
