...
            TextField(
                value = value,
                onValueChange = onValueChange,
                modifier = Modifier
                    .fillMaxWidth()
                    .heightIn(min = 56.dp)
                    .testTag("search-field"),
                placeholder = {
                    Text(
                        modifier = Modifier.weight(1f),
                        text = placeholder,
                        style = TextStyle.Default.copy(fontSize = 18.sp),
                        color = contentColor.copy(alpha = 0.38f)
...
